# ML

./: pyproject.toml  regressao_linear_with_perceptron.ipynb
regressao_linear_simples_pratica/: RL_single_variable_salary_df.ipynb
regressao_linear_simples_tutoriais/: regressao_com_gradient_descent.ipynb  regressao_com_numpy.ipynb  regressao_com_scikit_learn.ipynb
